frontend/src/cards/LessonCard/LessonCard.css
.lesson-card {
    display: flex;
    flex-direction: column;
    width: 100%;
    border: 1px solid #E4E4E4;
    border-radius: 5px;
    align-items: center;
    padding: 0px 10px;
    overflow: hidden;
    max-height: 72px;
    transition: max-height 1000ms ease;
}

.lesson-card.expanded {
    max-height: 2000px;
}

.lesson-card-top {
    display: flex;
    width: 100%;
    justify-content: space-between;
    align-items: center;
    padding: 0px 10px;
}

.lesson-info {
    font-size: 12px;
}

.lesson-title-section {
    width: 38%;
    display: flex;
    flex-direction: column;
    padding-bottom: 10px
}

.lesson-title {
    font-weight: 600;
}

.lesson-skills {
    font-weight: 500;
    display: flex;
    align-items: center;
    gap: 10px;

}

.lesson-due {
    margin-left: 85px;
}

.lesson-duration  {
    color: #a3a2a2;
}

.lesson-due  {
    color: #a3a2a2;
}

.expand-btn {
    height: 50px;
    display: flex;
    width: 70px;
    justify-content: center;
}

.expand-btn:hover {
    background-color: #d0d0d0;
    border: none;
}

.expand-btn.expanded img {
    width: 70%;
}

.expand-btn img {
    width: 60%;
}

.expanded-settings-text {
    font-size: 12px;
    color: #767676;
    margin: 1;
}



.radio-setting {
    margin: 10px;
}

.custom-input {
    border-bottom: 1px solid #b6b6b6;
    background: none;
    width: 70px;
    font-size: 12px;
    color: #767676;
}

.custom-input::placeholder {
    font-size: 12px;
}

.check-setting {
    display: flex;
    gap: 10px;
    margin: 10px;
    margin-top: 20px;
}

.lesson-card-expanded {
    width: 100%;
}

.action-panel {
    display: flex;
    padding: 10px 0px;
    justify-content: space-between;
    width: 100%;
}

.action-panel-left {
    display: flex;
    width: 34%;
    justify-content: space-between;
}

